tests/NormalTests/paczka1/fuzzy1/20287998.err
Error in line 11: ftfbxiGs S737 42,5
Error in line 15: 7Pbc5t S737 3,1
Error in line 6: S350 S737 89,5
Error in line 10: JYHkbvK S318 21,8
Error in line 17: S350 S143 97,6
Error in line 22: S350 S737 5,03
Error in line 25: JYHkbvK S143 -3,7
Error in line 24: qevOWrZM S350 27,1
Error in line 19: S350 S737 1,4
